kitty.conf. xinitrc

--- a/dotfiles/kitty/kitty.conf
+++ b/dotfiles/kitty/kitty.conf
@@ -10,7 +10,8 @@ foreground #000000
 background #a0a2a0
 map ctrl+c copy_to_clipboard
 map ctrl+v paste_from_clipboard
-map ctrl+shift+c send_text all \x03 # SIGINT
+# SIGINT
+map ctrl+shift+c send_text all \x03 
 resize_debounce_time 0
 tab_bar_edge top
 tab_separator " "
