amiwb: fix create new drawer triggers mass icon reload and re-layout

--- a/src/editpad/Makefile
+++ b/src/editpad/Makefile
@@ -6,8 +6,8 @@ INCLUDES = -I../.. -I../../src -I/usr/include/freetype2 -I/usr/include/X11/Xft
 LIBS = -lSM -lICE -lXext -lXmu -lX11 -lXrender -lXfixes -lXdamage \
        -lXft -lXrandr -lXcomposite -lm -lImlib2 -lfontconfig
 
-# Toolkit library location
-TOOLKIT_LIB = ../../libamiwb-toolkit.a
+# Toolkit library
+TOOLKIT_LIB = -L../.. -lamiwb
 
 # Source files
 SRCS = $(wildcard *.c)
@@ -20,8 +20,8 @@ EXEC = editpad
 all: $(EXEC)
 
 # Build editpad
-$(EXEC): $(OBJS) $(TOOLKIT_LIB)
-	$(CC) $(OBJS) $(TOOLKIT_LIB) $(LIBS) -o $(EXEC)
+$(EXEC): $(OBJS)
+	$(CC) $(OBJS) $(TOOLKIT_LIB) $(LIBS) -Wl,-rpath,'$$ORIGIN/../..' -Wl,-rpath,/usr/local/lib -o $(EXEC)
 
 # Pattern rule for object files
 %.o: %.c
