amiwb: hide window title if resize shrink could have title and right side buttons to collide. check for clients minimum dimension, don't allow resize-shrink below

--- a/.gitignore
+++ b/.gitignore
@@ -65,3 +65,19 @@ dkms.conf
 
 # debug information files
 *.dwo
+
+# Development and IDE files
+.vscode/
+build/
+tools/
+compile_commands.json
+
+# Development documentation
+BUILD.md
+errors.md
+
+# Build system files
+CMakeLists.txt
+
+# Development binaries
+hobbler
