amiwb: fixed menu Icons actions availability (rename, copy, delete, eject, ..) depending on context.

--- a/.gitignore
+++ b/.gitignore
@@ -44,8 +44,8 @@ valgrind_new.log
 amiwb.log
 amiwb_lldb.log
 docs/
-/editpad
-/reqasl
+src/editpad/editpad
+src/reqasl/reqasl
 *.log
 
 # Debug files
